admin/scss/admin.scss
@import "http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css";

.sub {
    background: none repeat scroll 0 0 #f5f5f5;
    margin-top: 15px;
    border-top: 1px solid #eee;
    color: #777;
    padding: 5px;
    text-align: center;
}

#expana_dashboard .welcome-panel {
	padding: 0 10px;
}

.welcome-panel-content {
	max-width: none;
}

.welcome-panel .welcome-panel-column {
	width: 64%;
    position: relative;
}

.welcome-panel .welcome-panel-column:first-child {
	width: 35%;
}

#dashboard-date-range {
	margin-bottom: 10px;
}

#dashboard-date-range > div {
	display: inline-block;
}

.date-range-selectors,
.date-range-inputs {
	margin-right: 10px;
}

.date-range-selectors {
    display: inline-block;
    position: relative;
    vertical-align: middle;
}

.date-range-button {
    border: 1px solid transparent;
    border-radius: 4px;
    cursor: pointer;
    display: inline-block;
    font-size: 14px;
    margin-bottom: 0;
    padding: 6px 12px;
    text-align: center;
    vertical-align: middle;
    white-space: nowrap;
    background-color: #fff;
    border-color: #ccc;
    color: #333;
}

.date-range-button:not(:last-child) {
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
    margin-right: -2px;
}

.date-range-button:not(:first-child) {
	margin-left: -2px;
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
}

.date-range-button:hover,
.date-range-button:active {
	background-color: #f1f1f1;
}

.date-range-button:focus,
.date-range-button.current {
	background-color: #e6e6e6;
	border-color: #adadad;
	z-index: 99;
}

.form-inline .form-group {
    display: inline-block;
    margin-bottom: 0;
    vertical-align: middle;
}

.sr-only {
    border: 0 none;
    clip: rect(0px, 0px, 0px, 0px);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

label {
    display: inline-block;
    font-weight: 700;
    margin-bottom: 5px;
    max-width: 100%;
}

.form-control {
    background-color: #fff;
    border: 1px solid #fff;
    border-radius: 4px;
    color: #555;
    display: block;
    font-size: 14px;
    height: 32px;
    line-height: 1.42857;
    padding: 5px 12px 5px 0;
    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
    width: 100%;
}

.input-group {
    border-collapse: separate;
    display: table;
    position: relative;
    margin-right: 10px;
    width: 160px;
}

.input-group-addon {
    background-color: #fff;
    color: #555;
    font-size: 14px;
    font-weight: 400;
    line-height: 1;
    padding: 5px 12px;
    border: 1px solid #fff;
}

.input-group .input-group-addon:first-child {
	border-top-left-radius: 4px;
	border-bottom-left-radius: 4px;
}

.date-range-inputs #date-range-filter {
	border-radius: 4px;
}

.input-group .form-control,
.input-group-addon,
.input-group-btn {
    display: table-cell;
}

#expana-from-date,
#expana-to-date {
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
	border: 1px solid #fff;
	box-shadow: none;
	margin: 0;
}

@media screen and (max-width: 870px) {

	.welcome-panel .welcome-panel-column,
	.welcome-panel .welcome-panel-column:first-child {
		display: block;
		float: none;
	}

	.welcome-panel .welcome-panel-column {
		width: 100%;
	}

	.welcome-panel .welcome-panel-column:first-child {
		width: 100%;
	}

}

#report_content {

    section:first-child {
        margin-top: 10px;
    }

	section {
		min-height: 20px;
		border-bottom: 1px rgb(192, 192, 192) dotted;
		margin-bottom: 5px;
		margin-right: 20px;
	}

	section:last-child {
		border-bottom: none;
	}

	section span {
		margin-left: 20px;
	}
	
}

#live {
    
    .live_visitor_counter_container {
        height: 100px;
        width: 200px;
        background-color: rgba(230, 230, 230, 1);
        border-radius: 8px;
        position: relative;
        margin: 10px auto;
    }

    #live_visitor_counter {
        position: absolute;
        color: rgba(0, 0, 0, 1);
        font-size: 48px;
        text-align: center;
        width: 100%;
        top: 40%;
    }

    .live_visitor_description {
        text-align: center;
        font-size: 14px;
        line-height: 1.412857
    }

    .counter_number {
        font-weight: bold;
    }
}

.loading {
    background-color: rgba(255, 255, 255, 0.8);
    position: absolute;
    top: 40%;
    width: 95%;
	text-align: center;
	font-size: 36px;
    z-index: 999;
}

.hide {
	display: none !important;
}

.highcharts-container > svg > text:last-of-type {
	display: none;
}

.no_data {
    width: 100%;
    height: 300px;
    float: left;
}

.no_data_cross {
    border: 4px solid rgba(124, 124, 124, 1);
    border-radius: 50%;
    display: block;
    height: 80px;
    margin: 100px auto 20px;
    position: relative;
    width: 80px;
}

.no_data_cross .line {
    background-color: rgba(124, 124, 124, 1);
    border-radius: 2px;
    display: block;
    height: 5px;
    position: absolute;
    top: 37px;
    width: 47px;
}

.no_data_cross .line.left {
    left: 17px;
    transform: rotate(45deg);
}

.no_data_cross .line.right {
    right: 16px;
    transform: rotate(-45deg);
}

.no_data > h2 {
    color: #575757;
    font-size: 30px;
    font-weight: 600;
    position: relative;
    text-align: center;
    text-transform: none;
}

.no_data > p {
    color: #797979;
    font-size: 16px;
    font-weight: 300;
    line-height: normal;
    margin: 0;
    position: relative;
    text-align: center;
}

